--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "auto-prefixer": "^0.4.2",
     "framer-motion": "^10.15.0",
+    "gsap": "^3.12.2",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
@@ -16,6 +17,7 @@
     "react-player": "^2.12.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "swiper": "^10.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
