--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-player": "^2.12.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-scroll-motion": "^0.3.2",
     "swiper": "^10.1.0",
     "web-vitals": "^2.1.4"
   },
