--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
+    "react-fullscreen-image": "^0.0.3",
     "react-icons": "^4.10.1",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-scroll-motion": "^0.3.2",
+    "react-type-animation": "^3.1.0",
     "swiper": "^10.1.0",
     "web-vitals": "^2.1.4"
   },
